# shengji_server

./: .gitignore  README.md  poetry.toml  pyproject.toml
shengji_server/: app.py  deck.py
shengji_server/src/: app.py  deck.py
shengji_server/src/templates/: styles.css
shengji_server/static/: styles.css
shengji_server/templates/: main.html
