[tool.poetry]
name = "shengji_server"
version = "0.1.0"
description = "Flask app to facilitate shengji over network"
authors = ["Renzhi Zhou"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Bootstrap = "^3.3.7"
Flask-SocketIO = "4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
